--- a/register.css
+++ b/register.css
@@ -104,7 +104,13 @@ main{
     position: relative;
 
 }
-
+#selection{
+    background-color: gainsboro;
+    border-radius: 10px;
+    width: 100%;
+    height: 35px;
+    border: 1px solid white;
+}
 
 
 
