--- a/CSS/about.css
+++ b/CSS/about.css
@@ -3,32 +3,62 @@
     padding: 0;
 }
 
-#nav{
-    width: 100%;
-    height: 100px;
-    background-color: wheat;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 28px;
-}
-a{
-    text-decoration: none;
-    color: black;
-}
-.logo{
-    width: 50%;
-    display: flex;
-    align-items: center;
-}
-.logo>li>a{
-    color: black;
-}
-#logo{
-    width: 50px;
-    height: 50px;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: wheat;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 22px;
+}
+
+.topnav a:hover {
+  background-color: green;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: green;
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 .topAbout{
     width: 100%;
     height: 100%;
@@ -82,30 +112,115 @@ main{
 .cards>section{
     padding: 5%;
 }
-footer{
-    height: 150px;
-    width: 100%;
-    background-color: wheat;
-    position: relative;
-    bottom: 0;
-    align-items: center;
-    display: flex;
+.paragrafi{
+  text-align: center;
+  width: 100%;
+  font-size: 10px;
+ 
 }
 
-footer>img{
-    height: 20px;
-}
-.div1{
-    width: 50%;
+@media (max-width: 600px) {
+  
+    .cards{
+      display: flex;
+      flex-direction: column;
+  
+  }
 
+  .quote{
+    width: 75%;
+    padding-top: 25px;
+    font-size: 20px;
+    text-align: center;
 }
-.div2{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.div2>ul>li>a>img{
-    width: 120px;
-    height: 120px;
 
+  .paragrafi{
+    
+  }
+}
+
+.footer-distributed {
+  background-color: wheat;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
+}
+
+.footer-distributed .footer-left p {
+  color: #8f9296;
+  font-size: 14px;
+  margin: 0;
+}
+/* Footer links */
+
+.footer-distributed p.footer-links {
+  font-size: 18px;
+  font-weight: bold;
+  color: #000000;
+  margin: 0 0 10px;
+  padding: 0;
+  transition: ease .25s;
+}
+
+.footer-distributed p.footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+  transition: ease .25s;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "·";
+  font-size: 20px;
+  left: 0;
+  color: #000000;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: green;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+  transition:all .25s;
+}
+
+.footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+
+.footer-distributed p.footer-links a:hover{text-decoration:underline;}
+
+/* Media Queries */
+
+@media (max-width: 600px) {
+  .footer-distributed .footer-left, .footer-distributed .footer-right {
+    text-align: center;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
 }
