--- a/CSS/register.css
+++ b/CSS/register.css
@@ -7,40 +7,72 @@ body{
     background-image: url("https://wallpaperaccess.com/full/6451924.jpg");
 
 }
-#nav{
-    width: 100%;
-    height: 100px;
-    background-color:  wheat;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 28px;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-a{
-    text-decoration: none;
-    color: black;
+
+.topnav {
+  overflow: hidden;
+  background-color: wheat;
 }
-.logo{
-    width: 50%;
-    display: flex;
-    align-items: center;
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 22px;
 }
-.logo>li>a{
-    color: black;
+
+.topnav a:hover {
+  background-color: green;
+  color: white;
 }
-#logo{
-    width: 50px;
-    height: 50px;
+
+.topnav a.active {
+  background-color: green;
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 main{
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10%;
+    width: 100%;
 }
 
 .formStyle{
-    width: 50%;
+    width: 100%;
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -50,16 +82,31 @@ main{
     border-radius: 10px;
     padding: 5%;
 }
+
 #registerForm{
     font-size: 30px;
 }
+
 #emaili{
-    background-color: gainsboro;
-    border-radius: 10px;
-    width: 100%;
-    height: 35px;
-    border: 1px solid white;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  font: 15px/1 'Open Sans', sans-serif;
+  color: #333;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  max-width: 500px;
+  background-color: #ddd;
+  border: none;
+  padding: 10px 11px 11px 11px;
+  border-radius: 3px;
+  box-shadow: none;
+  outline: none;
+  margin: 0;
+  box-sizing: border-box; 
 }
+
 #passi{
     background-color: gainsboro;
     border-radius: 10px;
@@ -70,31 +117,48 @@ main{
 .arrangeLabel{
     font-size: 20px;
 }
-#dont{
-    font-size: 20px;
-    padding-top: 20px;
+
+.btn {
+  padding: 1em 2.1em 1.1em;
+  border-radius: 3px;
+  margin: 8px 8px 8px 8px;
+  color: #fbdedb;
+  background-color: #fbdedb;
+  display: inline-block;
+  background: green;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: .85em;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  -webkit-box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  position: relative;
 }
-#dont>a{
-    color: green;
+.btn:hover, .btn:focus {
+  opacity: 0.8;
+}
+.btn:active {
+  -webkit-transform: scale(0.80);
+  -moz-transform: scale(0.80);
+  -ms-transform: scale(0.80);
+  -o-transform: scale(0.80);
+  transform: scale(0.80);
+}
+.btn.block {
+  display: block !important;
+}
+.btn.circular {
+border-radius: 50em !important;
 }
 
-#btn{
-    margin-top: 20px;
-    width: 250px;
-    border-radius: 10px;
-    background-color: green;
-    color: white;
-    height: 40px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
-    
-}
-#btn:hover{
-    color: wheat;
-    cursor: pointer;
-}
+
 .error {
     position: relative;
     color: #D8000C;
@@ -112,134 +176,99 @@ main{
     border: 1px solid white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* body {
-    background-image: url(../Fotot/white.jpg);
-    background-size: 100%;
-    
+section {
+  width: 100%;
+  display: inline-block;
+  background: #ccc;
+  height: 60vh;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+  text-decoration: underline;
 }
 
-.fontColor{
-    color: gray;
+.footer-distributed {
+  background-color: wheat;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
 }
-.formStyle{
-    width: 450px;
-    height: 520px;
-    margin-left: 525px;
-    margin-top: 125px;
-    background-color: wheat;
+
+.footer-distributed .footer-left p {
+  color: #8f9296;
+  font-size: 14px;
+  margin: 0;
+}
+/* Footer links */
+
+.footer-distributed p.footer-links {
+  font-size: 18px;
+  font-weight: bold;
+  color: #000000;
+  margin: 0 0 10px;
+  padding: 0;
+  transition: ease .25s;
+}
+
+.footer-distributed p.footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+  transition: ease .25s;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "·";
+  font-size: 20px;
+  left: 0;
+  color: #000000;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: green;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+  transition:all .25s;
+}
+
+.footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+
+.footer-distributed p.footer-links a:hover{text-decoration:underline;}
+
+/* Media Queries */
+
+@media (max-width: 600px) {
+  .footer-distributed .footer-left, .footer-distributed .footer-right {
     text-align: center;
-    border-radius: 20px;
-    padding-top: 2px;
-    padding-bottom: 40px;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
 }
-#registerForm{
-    font-size: 30px;
-   
-}
-form{
-    margin-top: 40px;
-}
-input{
-    margin-top: 10px;
-    background-color: gainsboro;
-    border-radius: 20px;
-    width: 250px;
-    height: 35px;
-    border: none;
-    padding-left: 14px;
-}
-
-.arrangeLabel{
-    position: relative;
-    right: 93px;
-    font-size: 18px;
-}
-#pak3{
-    position: relative;
-    right: 106px;
-}
-#pak2{
-    position: relative;
-    right: 98px;
-}
-#pak1{
-    position: relative;
-    right: 107px;
-}
-#pak4{
-    position: relative;
-    right: 91px;
-}
-
- input[type=text]:focus,
- input[type=email]:focus,
- input[type=password]:focus {
-    box-shadow: 0 0 8px wheat;
-    border: 1px solid wheat;
-}
-
-.error {
-    position: relative;
-    right: 44px;
-    color: #D8000C;
-    background-color: #FFBABA;
-}
-#erroremail{
-    position: relative;
-    right: 20px;
-}
-#errorsurname{
-    position: relative;
-    right: 36px;
-}
-#errorpassword{
-    position: relative;
-    right: 35px;
-}
-a{
-    text-decoration: none;
-    color: black;
-    position: relative;
-    top: 20px;
-    
-}
-
-#dnButt {
-    margin-top: 20px;
-    width: 250px;
-    border-radius: 20px;
-    background-color: green;
-    color: white;
-    height: 40px;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
-    
-}
-
-#dnButt:hover{
-    color: #141E27;
-    cursor: pointer;
-} */
